moved about content to about page

--- a/about.html
+++ b/about.html
@@ -93,18 +93,28 @@
         <!-- Your Image Here -->
         <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
-        <!-- Title -->
-        <h1>About Me</h1>
+        <h1>Hi, I'm Jourdan</h1>
+        <p>I'm a:
+        <p> · Scientist (ex-lab/analytical, now data/systems)
+        <br> · Self-hoster & server-tender · MLB tragic 
+        <br> · Mauler of R scripts · Personal project addict</p>
+        <br>
+        <p>I made this site to:
+        <p> · Give a quick overview of who I am
+        <br> · Post things I'm interested in
+        <br> · Link to projects I've been working on</p>
 
         <!-- Short Bio -->
-        <p>I'm a Melbourne-based lab systems administrator 
-          who spends my free time dabbling in a 
-          variety of online and offline projects<sup>1</sup>. 
-          My current fixations include optimization 
-          of automated<sup>2</sup> self-hosted<sup>3</sup> 
-          digital content platforms<sup>4</sup>
-          and analysing the nothing-if-not-consistently-piss-weak 
-          efforts of the Detroit Tigers<sup>5</sup>.
+        <p>By day I help facilitate use of laboratory information 
+          management systems, and spend my free time dabbling in a 
+          variety of online and offline projects. 
+          My current focus has been on setting up a new 4-node 
+          Proxmox cluster to take the pressure off a NAS that's been 
+          buckling under the weight of an ever-expanding docker stack.
+          When I'm not tinkering on the homelab, I'm usually: 
+          <br> · inhaling content (see:<a href="media.html">Media</a>)
+          <br> · watching the Detroit Tigers playing (consistently sub-.500) baseball
+          <br> · growing my annual chilli crop · cooking · camping/hiking
         </p>
       </div>
     </div>
