--- a/index.html
+++ b/index.html
@@ -90,22 +90,17 @@
   <div class="container">
     <div class="row">
       <div class="column" style="margin-top: 10%">
-        <!-- Your Image Here -->
-        <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
         <br>
         <!-- Title -->
-        <h1>Jourdan Keillor</h1>
-        <p> · Scientist (ex-lab/analytical, now data/systems)
-        <br> · Self-hoster & server-tender · MLB tragic 
-        <br> · Mauler of R scripts · Personal project addict</p>
-        <br>
+        <h1>Welcome</h1>
+        <p>Stay awhile, and listen</p>
       </div>
     </div>
   </div>
 
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer style="bottom: 0; width: 100%; height: 50px; color: #D8DEE9; text-align: center; display: flex; flex-direction: column; justify-content: center;">
+  <footer style="bottom: 0; width: 100%; height: 50px; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
       <div class="column">
         <br>
