--- a/about.html
+++ b/about.html
@@ -98,11 +98,6 @@
         <p> · Scientist (ex-lab/analytical, now data/systems)
         <br> · Self-hoster & server-tender · MLB tragic 
         <br> · Mauler of R scripts · Personal project addict</p>
-        <br>
-        <p>I made this site to:
-        <p> · Give a quick overview of who I am
-        <br> · Post things I'm interested in
-        <br> · Link to projects I've been working on</p>
 
         <!-- Short Bio -->
         <p>By day I help facilitate use of laboratory information 
@@ -125,26 +120,16 @@
   <footer style="bottom: 0; width: 100%; height: 50px; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
       <div class="column">
-        <p style="font-size: 75%;">
         <br>
         <br>
         <br>
         <br>
         <br>
-        <sup>1</sup> Mostly online
-        <br>
-        <sup>2</sup> Mostly *arr-suite apps
-        <br>
-        <sup>3</sup> Mostly Docker containers
-        <br>
-        <sup>4</sup> Mostly Plex
-        <br>
-        <sup>5</sup> Mostly piss 
-        <br>© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
+        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
         <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
