--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 
         <h1>Hi, I'm Jourdan</h1>
         <p>I'm a:
-        <p> · Scientist (ex-lab/analytical, now data/systems)
+        <br> · Scientist (ex-lab/analytical, now data/systems)
         <br> · Self-hoster & server-tender · MLB tragic 
         <br> · Mauler of R scripts · Personal project addict</p>
 
@@ -106,6 +106,7 @@
           My current focus has been on setting up a new 4-node 
           Proxmox cluster to take the pressure off a NAS that's been 
           buckling under the weight of an ever-expanding docker stack.
+          <br>
           When I'm not tinkering on the homelab, I'm usually: 
           <br> · inhaling content (see:<a href="media.html">Media</a>)
           <br> · watching the Detroit Tigers playing (consistently sub-.500) baseball
