--- a/about.html
+++ b/about.html
@@ -103,15 +103,15 @@
         <p>By day I help facilitate use of laboratory information 
           management systems, and spend my free time dabbling in a 
           variety of online and offline projects.
-          <br>
+          <p>
           My current focus has been on setting up a new 4-node 
           Proxmox cluster to take the pressure off a NAS that's been 
           buckling under the weight of an ever-expanding docker stack.
-          <br>
+          <p>
           When I'm not tinkering on the homelab, I'm usually: 
           <br> · inhaling content (see:<a href="media.html">Media</a>)
           <br> · watching the Detroit Tigers playing (consistently sub-.500) baseball
-          <br> · growing my annual chilli crop · cooking · camping/hiking
+          <br> · growing my annual chilli crop
         </p>
       </div>
     </div>
