--- a/media.html
+++ b/media.html
@@ -110,7 +110,9 @@
 
         /* Change background color of buttons on hover */
         .tab button:hover {
-            background-color: #ddd;
+            background-color: #282828;
+            color: var(--highlight-color);
+            font-weight: bold;
         }
 
         /* Style the active/current tablink */
