--- a/media.html
+++ b/media.html
@@ -34,7 +34,7 @@
 
         /* Apply the custom font to specific elements */
         body {
-        font-family: 'BerkeleyMonoVariable', monospace; /* Apply the custom font as the primary font with a fallback to sans-serif */
+        font-family: 'BerkeleyMonoVariable', monospace;
         }
 
         /* Container style */
@@ -117,7 +117,9 @@
 
         /* Style the active/current tablink */
         .tab button.active {
-            background-color: #ccc;
+            background-color: #282828;
+            color: var(--highlight-color);
+            font-weight: bold;
         }
 
         /* Style the container */
