--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
   
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer style="bottom: 0; width: 100%; height: 50px; color: #D8DEE9; text-align: center; display: flex; flex-direction: column; justify-content: center;">
+  <footer style="bottom: 0; width: 100%; height: 50px; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
       <div class="column">
         <br>
