--- a/media.html
+++ b/media.html
@@ -96,7 +96,7 @@
         /* Style the tab buttons */
         .tab button {
             display: block;
-            background-color: transparent; /* Removed background color */
+            background-color: transparent;
             border: none;
             outline: none;
             cursor: pointer;
@@ -106,6 +106,8 @@
             margin-bottom: 5px;
             text-align: left;
             border-radius: 20px; /* Rounded corners */
+            font-family: 'Berkeley Mono Variable', monospace;
+            color: var(--fg-color)
         }
 
         /* Change background color of buttons on hover */
