--- a/about.html
+++ b/about.html
@@ -93,8 +93,8 @@
         <!-- Your Image Here -->
         <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
-        <h1>Hi, I'm Jourdan</h1>
-        <p>I'm a:
+        <h1>Hi,</h1>
+        <p>I'm Jourdan. I'm a:
         <br> · Scientist (ex-lab/analytical, now data/systems)
         <br> · Self-hoster & server-tender · MLB tragic 
         <br> · Mauler of R scripts · Personal project addict</p>
@@ -104,14 +104,15 @@
           management systems, and spend my free time dabbling in a 
           variety of online and offline projects.
           <p>
-          My current focus has been on setting up a new 4-node 
-          Proxmox cluster to take the pressure off a NAS that's been 
-          buckling under the weight of an ever-expanding docker stack.
+          My current focus has been on setting up a new 
+          4-node Proxmox cluster to take the pressure off 
+          a NAS that's been buckling under the weight 
+          of an ever-expanding docker stack.
           <p>
           When I'm not tinkering on the homelab, I'm usually: 
           <br> · inhaling content (see:<a href="media.html">Media</a>)
           <br> · watching the Detroit Tigers playing (consistently sub-.500) baseball
-          <br> · growing my annual chilli crop
+          <br> · growing my annual chilli crop (this year's standout was Nazghul's Breakfast)
         </p>
       </div>
     </div>
