--- a/media.html
+++ b/media.html
@@ -96,7 +96,7 @@
         /* Style the tab buttons */
         .tab button {
             display: block;
-            background-color: transparent;
+            background-color: #282828;
             border: none;
             outline: none;
             cursor: pointer;
