--- a/about.html
+++ b/about.html
@@ -104,9 +104,9 @@
           management systems, and spend my free time dabbling in a 
           variety of online and offline projects.
           <p>
-          My current focus has been on setting up a new 
-          <br>4-node Proxmox cluster to take the pressure off 
-          <br>a NAS that's been buckling under the weight 
+          My current focus has been on setting up a
+          <br>new 4-node Proxmox cluster to take the pressure
+          <br>off a NAS that's been buckling under the weight 
           <br>of an ever-expanding docker stack.
           <p>
           When I'm not tinkering on the homelab, I'm usually: 
