--- a/socials.html
+++ b/socials.html
@@ -118,7 +118,7 @@
         <br>
         
         <!-- Bluesky -->
-        <a class="button button-bluesky" href="https://bsky.app/profile/joz.bsky.social" target="_blank" rel="me noopener">
+        <a class="button button-bluesky" href="https://bsky.app/profile/jozk.me" target="_blank" rel="me noopener">
             <img class="icon" src="images/icons/bluesky.jpg" alt="Bluesky Logo">Bluesky</a>
         <br>
         
