--- a/about.html
+++ b/about.html
@@ -96,25 +96,24 @@
         <h1>Hi</h1>
         <p>I'm Jourdan. I'm a:
         <br> · Scientist (ex-lab/analytical, now data/systems)
-        <br> · Self-hoster & server-tender · MLB tragic 
-        <br> · Mauler of R scripts · Personal project addict</p>
+        <br> · Self-hoster & server-tender · Baseball fan</p>
 
         <!-- Short Bio -->
-        <p>By day I help facilitate use of laboratory information 
-          management systems, and spend my free time dabbling in a 
-          variety of online and offline projects.
+        <p>I work with laboratory information 
+          management systems, and spend my 
+          off-time puttering through various projects.
+        <p>
+          My current focus has been on setting up 
+          a new 4-node Proxmox cluster to run my 
+          home server stack.
           <p>
-          My current focus has been on setting up a
-          <br>new 4-node Proxmox cluster to take the pressure
-          <br>off a NAS that's been buckling under the weight 
-          <br>of an ever-expanding docker stack.
-          <p>
-          When I'm not tinkering on the homelab, I'm usually: 
-          <br> · inhaling content (see:<a href="media.html">Media</a>)
+          When I'm not tinkering on the homelab, 
+          I'm usually: 
+          <br> · inhaling <a href="media.html">media</a>)
           <br> · watching the Detroit Tigers playing 
           <br>(consistently sub-.500) baseball
           <br> · growing my annual chilli crop 
-          <br>(this year's standout: Nazghul's Breakfast)
+          <br>(last year's standout: Nazghul's Breakfast)
         </p>
       </div>
     </div>
