--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,7 @@
         <br>
         <br>
         <p>To do:
-        <br> · Fix the CSS of this damn page. Look at those goofy looking buttons. No bueno.
-        <br> · Recipe Scraper/Markdown/Static site. Nyum?</p>
+        <br> · Fix this site - it's a mess
         <br>
       </div>
     </div>
