--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
           <p>
           When I'm not tinkering on the homelab, 
           I'm usually: 
-          <br> · inhaling <a href="media.html">media</a>)
+          <br> · inhaling <a href="media.html">media</a>
           <br> · watching the Detroit Tigers playing 
           <br>(consistently sub-.500) baseball
           <br> · growing my annual chilli crop 
