--- a/about.html
+++ b/about.html
@@ -93,27 +93,10 @@
         <!-- Your Image Here -->
         <img src="images/avatar1.jpg" class="avatar" srcset="images/avatar1.jpg 2x" alt="JK">
 
-        <h1>Hi</h1>
-        <p>I'm Jourdan. I'm a:
-        <br> · Scientist (ex-lab/analytical, now data/systems)
-        <br> · Self-hoster & server-tender · Baseball fan</p>
-
         <!-- Short Bio -->
-        <p>I work with laboratory information 
-          management systems, and spend my 
-          off-time puttering through various projects.
-        <p>
-          My current focus has been on setting up 
-          a new 4-node Proxmox cluster to run my 
-          home server stack.
-          <p>
-          When I'm not tinkering on the homelab, 
-          I'm usually: 
-          <br> · inhaling <a href="media.html">media</a>
-          <br> · watching the Detroit Tigers playing 
-          <br>(consistently sub-.500) baseball
-          <br> · growing my annual chilli crop 
-          <br>(last year's standout: Nazghul's Breakfast)
+        <p>Hi, I'm Jourdan. I started out as a microbiologist, tried my hand as an immunochemist, and now I work with laboratory information management systems.
+        <br>In my free time I can't help but fall down rabbitholes, puttering through various projects. My current focus has been on setting up a new 4-node Proxmox cluster to run my home server stack, which hosts media, web, monitoring, and home automation services.
+        <br>When I'm not tinkering on the homelab, I'm either inhaling <a href="media.html">media</a>, watching the Detroit Tigers, growing my annual chilli crop, or spending time with friends and family.
         </p>
       </div>
     </div>
