organise js files, tweak projects page

--- a/media.html
+++ b/media.html
@@ -199,7 +199,7 @@
 
     <!-- Lavparticle -->
     <canvas id="canvas"></canvas>
-    <script src="lav_particle.js"></script>
+    <script src="scripts/particles/lav_particle.js"></script>
 
     <!-- Call the animation function -->
     <script>
@@ -214,7 +214,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<div class="container" style="margin-right: 220px;"> <!-- Adjust margin-right to accommodate side navbar width -->
+<div class="container">
 
     <!-- Title -->
     <h1>Media</h1>
