--- a/socials.html
+++ b/socials.html
@@ -95,7 +95,7 @@
 
   <canvas id="canvas"></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="five.js"></script>
+  <script src="/scripts/particles/five.js"></script>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
