--- a/socials.html
+++ b/socials.html
@@ -154,7 +154,7 @@
         <br>
         <br>
         <br>
-        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="privacy.html">Privacy</a>
+        <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="/pages/extra/privacy.html">Privacy</a>
         <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
       </div>
       </div>
