--- a/media.html
+++ b/media.html
@@ -178,10 +178,10 @@
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
         <ul>
-            <li><a href="about.html">About</a></li> 
-            <li><a href="socials.html">Socials</a></li>
+            <li><a href="about.html" class="tab">About</a></li> 
+            <li><a href="socials.html" class="tab">Socials</a></li>
             <li><a href="media.html" class="tab active">Media</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="projects.html" class="tab">Projects</a></li>
         </ul>
     </div>
   </nav>
