--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
   <canvas id="canvas"></canvas>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="/scripts/particles/four.html"></script>
+  <script src="/scripts/particles/four.js"></script>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
