--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         <!-- Short Bio -->
         <p>Hi, I'm Jourdan. 
         <br><br>I started out as a microbiologist, tried my hand as an immunochemist, and have been working with laboratory information management systems for the last 6 years or so.
-        <br><br>In my free time I can't help but fall down rabbitholes, puttering through various projects. My current focus has been on setting up a new 4-node Proxmox cluster to run my home server stack, which hosts media, web, monitoring, and home automation services.
+        <br><br>In my free time I dive head-first down rabbitholes, puttering through various projects. My current focus has been on setting up a new 4-node Proxmox cluster to run my home server stack, which hosts media, web, monitoring, and home automation services.
         <br><br>When I'm not tinkering on the homelab, I'm either inhaling <a href="media.html">media</a>, watching the Detroit Tigers, growing my annual chilli crop, or spending time with friends and family.
         </p>
       </div>
