--- a/media.html
+++ b/media.html
@@ -400,7 +400,7 @@
                 <a href="https://store.steampowered.com/app/493520/GTFO/">
                 <h3>GTFO (2021)</h3>
                 </a>
-                <p>dropped to the bottom of an monster-infested facility armed very few resources and visibility, and it's up to you to escape. this game is unrelenting</p>
+                <p>dropped to the bottom of an monster-infested facility armed with very few resources and even less visibility - can you escape? this game is unrelenting</p>
             </div>
             <!--
             <div class="column">
