--- a/pages/extra/privacy.html
+++ b/pages/extra/privacy.html
@@ -15,16 +15,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-
-    <!-- Themes:
-            Auto:   css/skeleton-auto.css
-            Light:  css/skeleton-light.css
-            Dark:   css/skeleton-dark.css
-     -->
-    <link rel="stylesheet" href="css/skeleton-auto.css">
+  <!-- CSS -->
+    <!-- General -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preload" href="fonts/BerkeleyMonoVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
@@ -37,6 +31,23 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
 
+  <style>
+    canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Ensure the canvas is behind other content */
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
+    }
+    .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Ensure the container takes up the full height of the viewport */
+    }
+  </style>
 </head>
 
 <body>
@@ -44,9 +55,9 @@
   <!-- Navbar
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <nav class="navbar">
-    
+  
     <!-- This will display a link to the index page on the upper-left corner -->
-    <div class="brand-title">
+    <div class="header-title">
         <a href="index.html">jozk.me</a>
     </div>
 
@@ -61,11 +72,10 @@
     <!-- This is the link for the different pages -->
     <div class="navbar-links">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li> 
-        <li><a href="socials.html">Socials</a></li>
-        <li><a href="media.html">Media</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about.html" class="tab">About</a></li> 
+        <li><a href="socials.html" class="tab">Socials</a></li>
+        <li><a href="media.html" class="tab">Media</a></li>
+        <li><a href="projects.html" class="tab">Projects</a></li>
     </ul>
     </div>
   </nav>
