--- a/about.html
+++ b/about.html
@@ -94,8 +94,8 @@
 
         <!-- Short Bio -->
         <p>Hi, I'm Jourdan.
-        <br><br>In my free time I dive head-first down rabbitholes and putter through projects. My current focus has been on setting up a new 4-node Proxmox cluster to run my home server stack, which hosts media, web, monitoring, and home automation services.
-        <br><br>When I'm not tinkering on the homelab, I'm either inhaling <a href="media.html">media</a>, watching the Detroit Tigers, growing my annual chilli crop, or spending time with friends and family.
+        <br><br>I love to tinker and putter through projects. My current focus has been on setting up a new 4-node Proxmox cluster to run my home server stack, which hosts media, web, monitoring, and home automation services.
+        <br><br>When I'm not tinkering on the homelab, I'm either inhaling <a href="media.html">media</a>, watching the Detroit Tigers, tending to my annual chilli crop, or spending time with friends and family.
         <br><br>Work-wise, I started out as a microbiologist, took a turn as an immunochemist, and have been working with laboratory information management systems for the last 6 years or so.
         </p>
       </div>
