standardize CSS via workstation, deprecate socials.

--- a/projects.html
+++ b/projects.html
@@ -20,13 +20,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preload" href="fonts/BerkeleyMonoVariable.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-    <!-- Brand Styles -->
-    <link rel="stylesheet" href="css/brands.css">
-
-    <!-- Navbar -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <script src="./navbar.js"></script>
-
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar1.jpg">
@@ -93,7 +86,7 @@
   
   <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <footer style="bottom: 0; width: 100%; height: 50px; text-align: center; display: flex; flex-direction: column; justify-content: center;">
+  <footer>
     <div class="row">
       <div class="column">
         <br>
@@ -103,9 +96,32 @@
         <br>
         <p style="font-size: 75%;">© 2023 Jourdan Keillor · <a href="/pages/extra/privacy.html">Privacy</a>
         <br>Powered by <a href="https://vercel.com/">Vercel</a> and forked from <a href="https://littlelink.io/">LittleLink</a></p>
+        <div class="social-icons">
+          <a href="https://au.linkedin.com/in/jourdan-keillor-135a4a2b" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">
+          </a>
+          <a href="https://aus.social/@jkr442" target="_blank" rel="me noopener">
+            <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">
+          </a>
+          <a href="https://bsky.app/profile/jozk.me" target="_blank" rel="me noopener">
+            <img class="icon" src="images/icons/bluesky.jpg" alt="Bluesky Logo">
+          </a>
+          <a href="https://www.discordapp.com/users/175195763343753216" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/discord.svg" alt="Discord Logo">
+          </a>
+          <a href="https://www.goodreads.com/user/show/35797702-jourdan-keillor" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/goodreads.svg" alt="Goodreads Logo">
+          </a>
+          <a href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/lastfm-square.svg" alt="Last.fm Logo">
+          </a>
+          <a href="https://www.instagram.com/jkr442/?hl=en" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">
+          </a>
+        </div>
       </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
