--- a/media.html
+++ b/media.html
@@ -148,6 +148,21 @@
             text-align: justify; /* Justify the text */
             padding: 10px; /* Add padding for better readability */
         }
+        .social-icons a {
+          display: inline-block;
+          margin: 0 10px;
+          width: 24px;
+          height: 24px;
+        }
+        .social-icons img {
+          width: 100%;
+          height: 100%;
+          filter: grayscale(100%);
+          transition: filter 0.3s;
+        }
+        .social-icons img:hover {
+          filter: grayscale(0%);
+        }
       </style>
 
   <!-- Favicon
@@ -502,6 +517,29 @@
     style="bottom: 0; width: 100%; height: 50px; color: #282828; text-align: center; display: flex; flex-direction: column; justify-content: center;">
     <div class="row">
         <div class="column">
+            <div class="social-icons">
+              <a href="https://au.linkedin.com/in/jourdan-keillor-135a4a2b" target="_blank" rel="noopener">
+                <img src="images/icons/linkedin.svg" alt="LinkedIn">
+              </a>
+              <a href="https://aus.social/@jkr442" target="_blank" rel="noopener">
+                <img src="images/icons/mastodon.svg" alt="Mastodon">
+              </a>
+              <a href="https://bsky.app/profile/jozk.me" target="_blank" rel="noopener">
+                <img src="images/icons/bluesky.jpg" alt="Bluesky">
+              </a>
+              <a href="https://www.discordapp.com/users/175195763343753216" target="_blank" rel="noopener">
+                <img src="images/icons/discord.svg" alt="Discord">
+              </a>
+              <a href="https://www.goodreads.com/user/show/35797702-jourdan-keillor" target="_blank" rel="noopener">
+                <img src="images/icons/goodreads.svg" alt="Goodreads">
+              </a>
+              <a href="https://www.last.fm/user/jkr442" target="_blank" rel="noopener">
+                <img src="images/icons/lastfm-square.svg" alt="Last.fm">
+              </a>
+              <a href="https://www.instagram.com/jkr442/?hl=en" target="_blank" rel="noopener">
+                <img src="images/icons/instagram.svg" alt="Instagram">
+              </a>
+            </div>
             <br>
             <br>
             <br>
