--- a/media_test.html
+++ b/media_test.html
@@ -214,7 +214,7 @@
 
     <!-- Title -->
     <h1>Media</h1>
-    <p>Content I'm Loving - May, 2024 </p>
+    <p>Content I'm Loving (work in progress) </p>
 
     <!-- Music Section -->
     <section id="Music">
